# sysmon

./: .gitignore  .gitlab-ci.yml  README.md  chart.js  compose.yaml  index.html
sysmon/: Dockerfile  main.py  requirements.txt
sysmon-client/: Dockerfile  MANIFEST.in  README.md  compose.yaml  main.py  pyproject.toml  requirements.txt  setup.cfg  tox.ini
sysmon-client/config/: config.yaml
sysmon-client/src/sysmon_client/: __init__.py  client.py  collector.py  data_manager.py  file_manager.py  main.py  notify.py  remote.py  submitter.py  task.py  task_status.py
sysmon-client/src/sysmon_client/config/: __init__.py  config.yaml
sysmon-client/tests/: test_config.py  test_main.py  test_submitter.py  test_sysmon_copy.py
sysmon-server/: Dockerfile  MANIFEST.in  README.md  app.py  compose.yaml  pyproject.toml  setup.cfg  test.py
sysmon-server/src/sysmon_server/: __init__.py  app.py  client.py  task_status.py
sysmon-server/src/sysmon_server/endpoints/: deletions.py  executions.py  legacy.py  v01.py
sysmon-server/src/sysmon_server/static/: chart.js  style.css
sysmon-server/src/sysmon_server/templates/: index.html
sysmon-server/static/: chart.js
sysmon-server/templates/: index.html
sysmon-server/tests/: test_post.py
sysmon/config/: config.yaml
