[metadata]
name = sysmon-client
version = 0.0.1
author = Matthias Wellstein
author_email = mwellstein@uni-koblenz.de
description = A small system monitoring client. Works with sysmon-server
long_description = file: README.md
long_description_content_type = text/markdown
url = https://gitlab.uni-koblenz.de/mmac/sysmon-docker
project_urls =
    Bug Tracker = https://gitlab.uni-koblenz.de/mmac/sysmon-docker/-/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNUv3 License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src