[metadata]
name = sysmon-client
version = 0.3.2
author = Matthias Wellstein
author_email = mwellstein@uni-koblenz.de
description = A small system monitoring client. Works with sysmon-server
long_description = file: README.md
long_description_content_type = text/markdown
url = https://gitlab.uni-koblenz.de/mmac/sysmon-docker
project_urls =
    Bug Tracker = https://gitlab.uni-koblenz.de/mmac/sysmon-docker/-/issues
classifiers =
    Programming Language :: Python :: 3
    Development Status :: 2 - Pre-Alpha
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    sysmon-report = sysmon_client.client:entry_point_helper