[metadata]
name = sysmon-server
version = 0.3.1
author = Matthias Wellstein
author_email = mwellstein@uni-koblenz.de
description = A small server displaying system statistics. Works with sysmon-client
long_description = file: README.md
long_description_content_type = text/markdown
url = https://gitlab.uni-koblenz.de/mmac/sysmon-docker
project_urls =
    Bug Tracker = https://gitlab.uni-koblenz.de/mmac/sysmon-docker/-/issues
classifiers =
    Programming Language :: Python :: 3
    Development Status :: 2 - Pre-Alpha
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src